samples/_failures_safe/1761410238_287b62_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3328e340.c: In function ‘main’:
./samples/SAFE/__tmp_3328e340.c:143:12: error: missing terminating " character
  143 |     printf("Total
      |            ^~~~~~
./samples/SAFE/__tmp_3328e340.c:143:5: error: expected expression at end of input
  143 |     printf("Total
      |     ^~~~~~
./samples/SAFE/__tmp_3328e340.c:143:5: error: expected declaration or statement at end of input
